2012-04-20  Thomas Adam  <thomas@fvwm.org>
	* configure.ac:
	* docs/ANNOUNCE:
	Prep for 2.6.5

2012-03-17  Thomas Adam  <thomas@fvwm.org>
	* fvwm/events.c (HandlePropertyNotify):
	Fix XSizeHints problem with FVWM not correctly allowing resizing of
	windows when the hints are toggled with respect to FVWM processing
	XA_WM_NORMAL_HINTS.

2012-03-16  Thomas Adam  <thomas@fvwm.org>
	* fvwm/placement.c ( __pl_position_get_pos_simple):
	When using "UnderMouse" for PositionPlacement, ensure we honor the EWMH
	working area by default if it's in use.

2012-02-20  Thomas Adam  <thomas@fvwm.org>
	* fvwm/fvwm.c (InstallSignals):
	Unblock signals when installing them.

	When signals are registered, ensure they're unblocked so as not to queue
	them up.

2012-02-01  Thomas Adam  <thomas@fvwm.org>
	* fvwm/infostore.c (get_metainfo_length):
	* fvwm/infostore.c (new_metainfo):
	* fvwm/infostore.c (insert_metainfo):
	* fvwm/style.c (style_parse_one_style_option):
	Make C90 compliant.

2012-02-01  Thomas Adam  <thomas@fvwm.org>
	* configure.ac:
	* docs/ANNOUNCE:
	Prep for 2.6.4

2012-01-26  Thomas Adam  <thomas@fvwm.org>
	* fvwm/events.c (HandlePropertyNotify):
	Rather than tracking whether the icon name has been assigned or not, now
	also do this on _XA_WM_NAME when the icon title is not the same as the
	window title; since the ordering of events is not guaranteed to be processed
	correctly,

2012-01-18  Thomas Adam  <thomas@fvwm.org>
	* README:
	Update for 2.6.X release, but generalise on the actual version of FVWM
	so that generic documents such as this do not need updating as often.

2012-01-02  Thomas Adam  <thomas@fvwm.org>
	* fvwm/ConfigFvwmDefaults:
	Make BusyCursor Wait True, and give a CursorStyle of dot.

	This gives a visual clue when generating fvwm-menu-desktop, for
	instance via PipeRead which might take some time.

2011-12-19  Thomas Adam  <thomas@fvwm.org>
	* bin/fvwm-menu-desktop.in:
	Add back "/usr/share/applications" to the list in
	get_KDE_legacy_dirs().
