@@ -1,3 +1,8 @@
+2013-11-09  Dan Espen  <despen(at)1verizon.net>
+
+	* fvwm/events.c (HandlePropertyNotify): Disable prior fix suspected of causing
+	problems.
+
 2012-04-20  Thomas Adam  <thomas@fvwm.org>
 	* configure.ac:
 	* docs/ANNOUNCE:
